// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-histogram-widget Rendering should not render header when showHeader is false 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg
      viewBox="0 0 248 160"
    >
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(35, 15)"
      />
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(35, 140)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            0
          </text>
        </g>
      </g>
      <g
        transform="translate(35, 15)"
      />
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="205"
          x="35"
          y="15"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="#47DB99"
          stroke-width="4"
          style="opacity: 0;"
          y1="140"
          y2="140"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render clear button 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg
      viewBox="0 0 248 160"
    >
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(35, 15)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(35, 140)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(51.75,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(103,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(154.25,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(205.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(35, 15)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="51.25"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="102.5"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="153.75"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="205"
          x="35"
          y="15"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="#47DB99"
          stroke-width="4"
          style="opacity: 0;"
          y1="140"
          y2="140"
        />
      </g>
    </svg>
  </div>
  <button
    class="as-btn as-btn--primary as-btn--s as-category-widget__clear"
  >
    Clear selection
  </button>
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render colors properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg
      viewBox="0 0 248 160"
    >
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(35, 15)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(35, 140)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(51.75,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(103,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(154.25,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(205.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(35, 15)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: #EEFFFF;"
          width="50.25"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #EEFFFF;"
          width="50.25"
          x="51.25"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #FFAAAA;"
          width="50.25"
          x="102.5"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #FFAAAA;"
          width="50.25"
          x="153.75"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="205"
          x="35"
          y="15"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          height="125"
          shape-rendering="crispEdges"
          stroke="#fff"
          style=""
          width="102.5"
          x="35"
          y="15"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="135"
          y="12.5"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="32.5"
          y="12.5"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(27.5,132.5)"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(130,132.5)"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="#47DB99"
          stroke-width="4"
          style="opacity: 1;"
          x1="35"
          x2="137.5"
          y1="140"
          y2="140"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    Histogram Widget Example
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    Description for Histogram Widget
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg
      viewBox="0 0 248 160"
    >
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(35, 15)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(35, 140)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(51.75,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(103,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(154.25,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(205.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(35, 15)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="51.25"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="102.5"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="153.75"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="205"
          x="35"
          y="15"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          shape-rendering="crispEdges"
          stroke="#fff"
          style="display: none;"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          style="display: none;"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 0;"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="#47DB99"
          stroke-width="4"
          style="opacity: 0;"
          y1="140"
          y2="140"
        />
      </g>
    </svg>
  </div>
  <button
    class="as-btn as-btn--primary as-btn--s as-category-widget__clear"
  >
    Clear selection
  </button>
</as-histogram-widget>
`;

exports[`as-histogram-widget Rendering should render selection properly 1`] = `
<as-histogram-widget
  class="hydrated"
>
  
  <h2
    class="as-histogram-widget__header"
  >
    
  </h2>
  <p
    class="as-histogram-widget__description as-body"
  >
    
  </p>
  <div
    class="as-histogram-widget__wrapper"
  >
    <span
      class="as-histogram-widget__tooltip"
      role="tooltip"
    >
      
    </span>
    <svg
      viewBox="0 0 248 160"
    >
      <g
        class="yAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(35, 15)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,125.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,94.25)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,63)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,31.75)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            15
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.5)"
        >
          <line
            stroke="currentColor"
            x2="205"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-10"
          >
            20
          </text>
        </g>
      </g>
      <g
        class="xAxis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="middle"
        transform="translate(35, 140)"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(51.75,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(103,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(154.25,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            30
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(205.5,0)"
        >
          <text
            dy="0.71em"
            fill="currentColor"
            y="10"
          >
            40
          </text>
        </g>
      </g>
      <g
        transform="translate(35, 15)"
      >
        <rect
          class="bar"
          height="0"
          style="fill: #47DB99;"
          width="50.25"
          x="0"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #47DB99;"
          width="50.25"
          x="51.25"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="102.5"
          y="125"
        />
        <rect
          class="bar"
          height="0"
          style="fill: #1785FB;"
          width="50.25"
          x="153.75"
          y="125"
        />
      </g>
      <g
        class="brush"
        fill="none"
        pointer-events="all"
      >
        <rect
          class="overlay"
          cursor="crosshair"
          height="125"
          pointer-events="all"
          width="205"
          x="35"
          y="15"
        />
        <rect
          class="selection"
          cursor="move"
          fill="#777"
          fill-opacity="0.3"
          height="125"
          shape-rendering="crispEdges"
          stroke="#fff"
          style=""
          width="102.5"
          x="35"
          y="15"
        />
        <rect
          class="handle handle--e"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="135"
          y="12.5"
        />
        <rect
          class="handle handle--w"
          cursor="ew-resize"
          height="130"
          style=""
          width="5"
          x="32.5"
          y="12.5"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(27.5,132.5)"
          width="15"
        />
        <rect
          class="handle--custom"
          cursor="ew-resize"
          fill="#47DB99"
          height="15"
          rx="100"
          ry="100"
          style="opacity: 1;"
          transform="translate(130,132.5)"
          width="15"
        />
        <line
          class="bottomline"
          pointer-events="none"
          stroke="#47DB99"
          stroke-width="4"
          style="opacity: 1;"
          x1="35"
          x2="137.5"
          y1="140"
          y2="140"
        />
      </g>
    </svg>
  </div>
  
</as-histogram-widget>
`;
